Fixed flex on safari, added cursor to people card arrows

--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,9 @@ a {
 }
 
 .flex-container {
+    display: -webkit-flex;
+    -webkit-justify-content: space-between;
+    -webkit-flex-wrap: wrap;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -204,6 +207,8 @@ a {
     overflow: hidden;
     position: relative;
     left: 0;
+    display: -webkit-flex;
+    -webkit-justify-content: space-around;
     display: flex;
     justify-content: space-around;
     transition: left 300ms ease;
@@ -219,6 +224,14 @@ a {
     background-color: #2c2831;
     color: #394034;
     top: 45%;
+}
+
+.people-arrow:hover {
+  cursor: default;
+}
+
+.people-arrow.active:hover {
+  cursor: pointer;
 }
 
 .people-arrow.active {
@@ -296,6 +309,9 @@ a {
     width: 100%;
     height: 100%;
     text-align: center;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+    -webkit-justify-content: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -355,6 +371,8 @@ a {
 }
 
 .countdown-container {
+  display: -webkit-flex;
+  -webkit-justify-content: space-around;
   display: flex;
   justify-content: space-around;
   width: 75%;
